--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3,6 +3,11 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+.logo{
+  height: 40px;
+  width: 40px;
+  margin: 12px;
+}
 .materialize-red {
   background-color: #e51c23 !important;
 }
